[tool.poetry]
name = "junctionart"
version = "0.1.2"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "junctionart"}]

[tool.poetry.dependencies]
python = "^3.9"
dill = "0.3.7"
Flask = "1.0.2"
matplotlib = "3.4.3"
numpy = "1.25.2"
pandas = "2.0.3"
psutil = "5.9.0"
pytest = "7.4.0"
PyYAML = "6.0.1"
scipy = "1.11.1"
seaborn = "0.12.2"
Shapely = "2.0.1"
sphinx_rtd_theme = "1.2.2"
sympy = "1.12"
tabulate = "0.8.9"
tqdm = "4.65.0"
z3_solver = "4.12.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
